--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.4.8",
     "bootstrap": "^5.3.3",
     "dom": "^0.0.3",
+    "material-react-table": "^3.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
